Answer for a source once, where the position already answers
A `SourceRef` put a source identity beside a `SourcePos` that carries one, so a place had two
authorities for the same fact and nothing kept them the same. Over one compile of the suite, 16245
of 16260 constructions were the identity taken out of the position and put back beside it; the 15
that disagreed read `own=0 beside=Main`, pairing the identity a compilation files sources under with
the default module name a caller handed `Compilation.ofSource`. The rule `WrittenAt.cite` already
states — a citation is the single answer about a place, so a contradiction inside it is a place that
is two places — was written for the argument and not applied to the type it was written about.

Three things go, and they are three different shapes of the same root.

Inside values. `SourceRef` is deleted; `Citation.Written.at` and `Citation.OutOfSight.reachedFrom`
carry the coordinate itself, as do `RowOutcome`, `ExampleStatements`' recorded rows and unread fakes,
and its statements. `Deadline.Work` loses a `sourceId` nothing read. `OriginRef.InvariantOrigin.at`
goes with them: both of its construction sites passed `Optional.empty()` and `citation()` answered
empty for it, so the field was a state nothing could reach.

Across parallel collections. `Front.ExampleOrigins` and `FakeOrigins` recorded which source wrote
each block beside blocks that say it themselves — 1262 of 1262 agreeing, kept in step by two walks
agreeing on an order, with a reader that had to say what a length that did not match meant. One key
answers what was actually asked: `ExampleSources(module)`, the sources that wrote something, as a
`SequencedSet`. `Prepared.forExamplesWrittenIn` reads each block's own place, and the alignment
guard and the `placed` flag go with the lists.

Between a report and where it is filed. `Report.Delivery` let a report name its own file ahead of
its position, and both sites that used it read that name off a `SourceRef` — the p